--- a/package.json
+++ b/package.json
@@ -18,9 +18,10 @@
     "@react-navigation/native-stack": "^6.6.2",
     "expo": "~45.0.0",
     "expo-font": "~10.1.0",
+    "expo-image-picker": "~13.1.1",
     "expo-linear-gradient": "~11.3.0",
     "expo-status-bar": "~1.3.0",
-    "firebase": "7.14.2",
+    "firebase": "8",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-native": "0.68.2",
