--- a/package.json
+++ b/package.json
@@ -21,15 +21,20 @@
     "expo-font": "~10.1.0",
     "expo-image-picker": "~13.1.1",
     "expo-linear-gradient": "~11.3.0",
+    "expo-modules-core": "~0.9.2",
     "expo-status-bar": "~1.3.0",
     "firebase": "8",
+    "lottie-react-native": "5.0.1",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-native": "0.68.2",
+    "react-native-gesture-handler": "~2.2.1",
     "react-native-gifted-chat": "^1.0.1",
     "react-native-pager-view": "5.4.15",
+    "react-native-reanimated": "~2.8.0",
     "react-native-safe-area-context": "4.2.4",
     "react-native-screens": "~3.11.1",
+    "react-native-skeleton-content": "^1.0.24",
     "react-native-tab-view": "^3.1.1",
     "react-native-web": "0.17.7",
     "react-redux": "7.2.5",
