--- a/package.json
+++ b/package.json
@@ -18,10 +18,12 @@
     "@react-navigation/native-stack": "^6.6.2",
     "expo": "~45.0.0",
     "expo-contacts": "~10.2.0",
+    "expo-device": "~4.2.0",
     "expo-font": "~10.1.0",
     "expo-image-picker": "~13.1.1",
     "expo-linear-gradient": "~11.3.0",
     "expo-modules-core": "~0.9.2",
+    "expo-notifications": "~0.15.4",
     "expo-status-bar": "~1.3.0",
     "firebase": "8",
     "lottie-react-native": "5.0.1",
